New Html and Css

--- a/index.html
+++ b/index.html
@@ -1,68 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu Portfólio</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-
-    section {
-      padding: 20px;
-    }
-
-    h2 {
-      border-bottom: 2px solid #333;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      margin-bottom: 10px;
-    }
-
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Olá, me chamo Enzo Salomão</h1>
-    <p>Nasci em 11/02/2003 e estou cursando Ciência da Computação com uma paixão por programação. Estou sempre em evolução e sempre me interessei no mundo da web.</p>
+    <!-- Conteúdo do cabeçalho -->
+    <h1>Portfólio do Enzo Salomão</h1>
   </header>
 
-  <section>
+  <section class="section-primary">
+    <!-- Conteúdo da primeira seção -->
     <h2>Habilidades</h2>
     <ul>
       <li>Linguagens de Programação</li>
-      <li></li>
       <li>Desenvolvimento Web</li>
-      <li></li>
-      <li>Versionamento de Código</li>
       <li>Resolução de Problemas</li>
     </ul>
   </section>
 
-  <section>
+  <section class="section-secondary">
+    <!-- Conteúdo da segunda seção -->
     <h2>Projetos</h2>
     <ul>
       <li>Sistema de Gerenciamento Pessoal</li>
@@ -71,15 +32,35 @@
     </ul>
   </section>
 
-  <section>
+  <section class="section-tertiary">
+    <!-- Conteúdo da terceira seção -->
     <h2>Experiência Profissional</h2>
     <ul>
+      <li>X</li>
+      <li>X</li>
       <li>X</li>
     </ul>
   </section>
 
+  <section class="section-quaternary">
+    <!-- Conteúdo da quarta seção -->
+    <h2>Contatos</h2>
+    <ul>
+      <li>
+        <a href="https://www.instagram.com/salo_eda" target="_blank">Instagram</a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/enzo-salomão-13391626b/" target="_blank">Linkedin</a>
+      </li>
+      <li>
+        <a href="https://github.com/EnzoMoita" target="_blank">GitHub</a>
+      </li>
+    </ul>
+  </section>
+
   <footer>
-    <p>Contato: enzosadourado@hotmail.com</p>
+    <!-- Conteúdo do rodapé -->
+    <a href="#" class="print-button" onclick="window.print()">Imprimir</a>
   </footer>
 </body>
 </html>
